--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,18 @@
 apply plugin: 'com.android.application'
 
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
+    signingConfigs {
+        config {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+        }
+    }
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
@@ -15,12 +27,46 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        prodDebug {
+            debuggable true
+            jniDebuggable false
+            renderscriptDebuggable false
+            renderscriptOptimLevel 3
+            minifyEnabled false
+        }
+    }
+    productFlavors {
+        red {
+            minSdkVersion 23
+            applicationId 'gusev.max.tinkoff_homework.red'
+            targetSdkVersion 26
+            versionCode 1
+            versionName '1.0'
+            signingConfig signingConfigs.config
+        }
+        blue {
+            minSdkVersion 23
+            applicationId 'gusev.max.tinkoff_homework.blue'
+            targetSdkVersion 26
+            versionCode 1
+            versionName '1.0'
+            signingConfig signingConfigs.config
+        }
+        green {
+            minSdkVersion 23
+            applicationId 'gusev.max.tinkoff_homework.green'
+            targetSdkVersion 26
+            versionCode 1
+            versionName '1.0'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
