--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".NodeApp"
         android:theme="@style/AppTheme">
         <activity android:name=".screen.nodes_list.NodesListActivity">
             <intent-filter>
@@ -14,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".screen.nodes_relations.NodeRelationsActivity"/>
     </application>
 
 </manifest>
